--- a/app/views/static_pages/TMD.html.erb
+++ b/app/views/static_pages/TMD.html.erb
@@ -34,6 +34,9 @@
 			<p>
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.
 			</p>
+			<p>
+				For definitions related to Tempomandibular Joint Disorder and Tempomandibular Joint  consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of TMD, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+			</p>
 		</div>
 	</div>
 </div>
