--- a/app/views/static_pages/abscessedtooth.html.erb
+++ b/app/views/static_pages/abscessedtooth.html.erb
@@ -18,7 +18,7 @@
 				As untreated abscesses may cause serious health problems by spreading to surrounding teeth and tissue, other parts of the body, and even to family and friends, you should see TLC Dental for immediate consultation.  We will detect the source of your infection and offer you options for proper treatment.<br>
 			</p>
 			<p>
-				For more information on abscessed teeth and gums click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenbergs’s Dental Dictionary.  And for prompt treatment and alleviation of your abscessed tooth or gum, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to an abscessed tooth or gum consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of your abscessed tooth or gum, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
