--- a/app/views/static_pages/athleticmouthguards.html.erb
+++ b/app/views/static_pages/athleticmouthguards.html.erb
@@ -53,11 +53,11 @@
 			</p>
 			<p>
 				<b>Durability</b><br>
-				Glidewell and Bite Tech employ the most advanced Multi-Layered Pressure Laminated technology to create your custom made TLC athletic to assure necessary thickness, protection and durability.<br>
+				Glidewell and Bite Tech exclusive licensee of UA Performance Mouthwear, employ the most advanced Multi-Layered Pressure Laminated technology to create your custom made TLC athletic to assure necessary thickness, protection and durability.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of mouthguards, click on Dr. Rothenberg’s Dental Encyclopedia.  And to enjoy the advanced oralfacial protection of a custom fitted TLC athletic mouthguard please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental mouthguards consult Dr. Rothenberg's Dental Dictionary.  And to enjoy the advanced oralfacial protection of a custom fitted TLC athletic mouthguard please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
