--- a/app/views/static_pages/badbreath.html.erb
+++ b/app/views/static_pages/badbreath.html.erb
@@ -18,8 +18,8 @@
 				<li>Poor dental hygiene</li>
 				<li>Infections in the mouth</li>
 				<li>Dry Mouth (Xerostomia)</li>
-				<li>Respiratory tract infections</li>
-				<li>Diseases of the liver, lung, kidney, digestive trace,and sinus; diabetes, reflux, etc.</li>
+				<li>Respiratory trace infections</li>
+				<li>Diseases of the liver, lung, kidney, digestive trace, and sinus; diabetes, reflux, etc.</li>
 				<li>Smoking and chewing tobacco</li>
 			</ul>
 			<p>	
@@ -29,7 +29,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on bad breath (halitosis) click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt diagnosis and treatment of your bad breath, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.    
+				For definitions related to halitosis consult Dr. Rothenberg's Dental Dictionary.  And for prompt diagnosis and treatment of your bad breath, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.    
 			</p>									
 		</div>
 	</div>
