--- a/app/views/static_pages/bleedinggums.html.erb
+++ b/app/views/static_pages/bleedinggums.html.erb
@@ -1,4 +1,4 @@
-<title>Swollen, Tender, Bleeding Gums | TLC Dental Group Syracuse</title>
+<title>Swollen Tender Bleeding Gums | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Swollen, Tender Bleeding Gums</h3>
+			<h3>Swollen, Tender, Bleeding Gums</h3>
 			<p>
 				Swollen, tender, and bleeding gums may be a symptom of gingivitis or more advanced periodontal disease<br>
 			</p>
@@ -26,7 +26,7 @@
 				<li>An unpleasant taste in your mouth</li>
 			</ul>
 			<p>
-				Advanced Periodontal Disease or Periodontitis is a severe form of gum, tissue, and bone disease that often derives from gingivitis and that similarly is exacerbated by poor oral hygiene, poor nutrition, tobacco and substance use, diabetes, certain diseases, infections, and medications, dry mouth, and ill-fitting dentures.<br>
+				Advanced periodontal disease or periodontitis is a severe form of gum, tissue, and bone disease that often derives from gingivitis and that similarly is exacerbated by poor oral hygiene, poor nutrition, tobacco and substance use, diabetes, certain diseases, infections, medications, dry mouth, and ill-fitting dentures.<br>
 			</p>
 			<p>
 				Advanced periodontal disease may result in extensive gingival infection, tooth loss, jawbone deterioration, and an increased risk of heart attack, stroke, lung disease, rheumatoid arthritis, diabetes, dementia, and premature birth.  It is not curable but with proper treatment, it can be controlled.<br>
@@ -50,6 +50,9 @@
 			</p>
 			<p>
 				Throughout your corrective procedure you will enjoy the comfort of our signature “Gentle Dentistry.” 
+			</p>
+			<p>
+				For definitions related to gingivitis and periodontitis consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of swollen, tender, bleeding gums, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
