--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -1,4 +1,4 @@
-<title>Bridges | TLC Dental Group Syracuse</title>
+<title>Dental Bridges | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Bridges</h3> 
+			<h3>Dental Bridges</h3> 
 			<p>
 				A bridge is a device that replaces a missing tooth or teeth and is either fixed (permanently attached) or removable (see a removable partial denture).  A common type of bridge is made by creating crowns for the teeth abutting the open space left by a lost tooth, attaching a false tooth to the two crowns to fill the open space between them, and then permanently emplacing the two crowns that secure the bridge.
 			</p>
@@ -52,7 +52,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental bridges consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
