--- a/app/views/static_pages/cankersores.html.erb
+++ b/app/views/static_pages/cankersores.html.erb
@@ -32,7 +32,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on canker sores click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary  And for prompt examination and treatment of your canker sores, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
+				For definitions related to canker sores consult Dr. Rothenberg's Dental Dictionary.  And for prompt examination and treatment of your canker sores, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
 			</p>									
 		</div>
 	</div>
