--- a/app/views/static_pages/cleaning.html.erb
+++ b/app/views/static_pages/cleaning.html.erb
@@ -1,4 +1,4 @@
-<title>Cleaning | TLC Dental Group Syracuse</title>
+<title>Dental Cleaning | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Cleaning</h3> 
+			<h3>Dental Cleaning</h3> 
 			<p>
 				A Professional Dental Cleaning or “Recare” is a comfortable, biannual or, if needed, more frequent procedure that lasts approximately one hour and is performed by our highly skilled and experienced hygienists. It is an essential part of achieving and maintaining your “Dream Smile” and is comprised of the following services:  
 			</p>
@@ -62,7 +62,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to professional dental cleaning consult Dr. Rothenberg's Dental Dictionary.  To schedule a "Recare" please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>			
 		</div>
 	</div>
