--- a/app/views/static_pages/coldsores.html.erb
+++ b/app/views/static_pages/coldsores.html.erb
@@ -33,7 +33,10 @@
 				In treating your cold sores we will carefully examine your condition for any complications and prescribe appropriate medication to relieve your pain, expedite the healing, and reduce the frequency and severity of future episodes.<br>
 			</p>
 			<p>
-				Throughout your examination you will enjoy the comfort of our signature “Gentle Dentistry.”  For more information on cold sores click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt examination and treatment of your cold sores, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				Throughout your examination you will enjoy the comfort of our signature “Gentle Dentistry.”
+			</p>
+			<p>
+			  For definitions related to cold sores consult Dr. Rothenberg's Dental Dictionary.  And for prompt examination and treatment of your cold sores, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>									
 		</div>
 	</div>
