--- a/app/views/static_pages/contouring.html.erb
+++ b/app/views/static_pages/contouring.html.erb
@@ -1,4 +1,4 @@
-<title>Contouring | TLC Dental Group Syracuse</title>
+<title>Dental Contouring | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Cosmetic Contouring</h3> 
+			<h3>Dental Contouring</h3> 
 			<p>
 				Dental contouring is twofold.  Tooth Contouring is a quick and comfortable procedure to improve the shape, length, and surface of teeth.  Gum contouring is a complementary procedure to reshape your gums for healthy dental support and a radiant smile.
 			</p>
@@ -25,7 +25,7 @@
 				<li>Reduces gum tissue to eliminate a “gummy smile”</li>
 				<li>Lengthens the gum line of a crown for periodontal benefit</li>
 				<li>Reduces a pocket for periodontal benefit</li>
-				<li>Creates your Dream Smile</li>
+				<li>Creates your (Dream Smile)</li>
 			</ul>
 
 			<p>
@@ -33,7 +33,7 @@
 				Our first step in TLC tooth contouring is a careful digital X-ray exam to determine the size and location of the tooth’s pulp (the center of the tooth that contains the nerves and blood vessels) and whether contouring or another procedure such as bonding or veneers would be most appropriate.<br>
 			</p>
 			<p>
-				If the exam is favorable for tooth contouring, a handpiece or laser is used to gently sculpt the tooth by removing traces of surface enamel.  Once properly shaped and adjusted, the tooth is smoothed, and polished.  In less than thirty minutes, an imperfect tooth is transformed into a radiant tooth worthy of a Dream Smile.<br>
+				If the exam is favorable for tooth contouring, a handpiece or laser is used to gently sculpt the tooth by removing traces of surface enamel.  Once properly shaped and adjusted, the tooth is smoothed, and polished.  In less than thirty minutes, an imperfect tooth is transformed into a radiant tooth worthy of a (Dream Smile).<br>
 			</p>
 			<p>
 				The first step in aesthetic gum contouring is a thorough exam of your gum tissue for treatment.  If our exam is favorable and your gum line is irregular, we will mark a desired line and gently sculpt the gum to conform to the line thereby providing your teeth with an enhancing rather than distracting gum line.<br>
@@ -47,12 +47,12 @@
 				The durability of contouring largely depends on good dental hygiene and regular dental checkups to remove sub-gingival bacteria that cause gum disease.  Proper care will extend the aesthetic benefits of contouring.
 			</p>
 			<p>
-				<b>Contouring Appearance Appearance</b><br>
+				<b>Contouring Appearance</b><br>
 				TLC contouring perfectly reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for improved dental health in carefully contoured teeth.  And in artfully shaping your teeth and gums, we provide a truly resplendent addition to your “Dream Smile.”
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental contouring consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from dental contouring, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
