--- a/app/views/static_pages/crowns.html.erb
+++ b/app/views/static_pages/crowns.html.erb
@@ -1,4 +1,4 @@
-<title>Crowns | TLC Dental Group Syracuse</title>
+<title>Dental Crowns | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Crowns</h3> 
+			<h3>Dental Crowns</h3> 
 			<p>
 				A crown or cap is a complete and permanent cover for a damaged tooth or an implant that it strengthens and protects. A crown also supports the surrounding teeth, preserves proper “bite,” and projects a healthy and radiant appearance.
 			</p>
@@ -22,7 +22,7 @@
 				<li>Cover a dental implant</li>
 				<li>Cover a discolored or poorly shaped tooth</li>
 				<li>Cover a brittle tooth that has had root canal treatment</li>
-				<li>Create your Dream Smile</li>
+				<li>Create your (Dream Smile)</li>
 			</ul>
 
 			<p>
@@ -47,7 +47,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental crowns consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from crowns, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
