--- a/app/views/static_pages/dreamsmiles.html.erb
+++ b/app/views/static_pages/dreamsmiles.html.erb
@@ -17,17 +17,17 @@
 					<%= image_tag 'palate.jpg', :class => "float-right" %>
 		          <ul>
 		          	<b>
-		            <li><%= link_to "Bonding", dreamsmiles_bonding_path %></li><br>
-		            <li><%= link_to "Bridges", dreamsmiles_bridges_path %></li><br>
-		            <li><%= link_to "Cleaning", dreamsmiles_cleaning_path %></li><br>
-		            <li><%= link_to "Contouring", dreamsmiles_contouring_path %></li><br>
-		            <li><%= link_to "Crowns", dreamsmiles_crowns_path %></li><br>
+		            <li><%= link_to "Dental Bonding", dreamsmiles_bonding_path %></li><br>
+		            <li><%= link_to "Dental Bridges", dreamsmiles_bridges_path %></li><br>
+		            <li><%= link_to "Dental Cleaning", dreamsmiles_cleaning_path %></li><br>
+		            <li><%= link_to "Dental Contouring", dreamsmiles_contouring_path %></li><br>
+		            <li><%= link_to "Dental Crowns", dreamsmiles_crowns_path %></li><br>
 		            <li><%= link_to "Dentures", dreamsmiles_dentures_path %></li><br>
-		            <li><%= link_to "Fillings", dreamsmiles_fillings_path %></li><br>
-		            <li><%= link_to "Implants", dreamsmiles_implants_path %></li><br>
+		            <li><%= link_to "Dental Fillings", dreamsmiles_fillings_path %></li><br>
+		            <li><%= link_to "Dental Implants", dreamsmiles_implants_path %></li><br>
 		            <li><%= link_to "Snap-On-Smile", dreamsmiles_snaponsmile_path %></li><br>
-		            <li><%= link_to "Veneers", dreamsmiles_veneers_path %></li><br>
-		            <li><%= link_to "Whitening", dreamsmiles_whitening_path %></li><br>
+		            <li><%= link_to "Dental Veneers", dreamsmiles_veneers_path %></li><br>
+		            <li><%= link_to "Dental Whitening", dreamsmiles_whitening_path %></li><br>
 		        	</b>
 		          </ul>
 				</div>
