--- a/app/views/static_pages/flouridetreatment.html.erb
+++ b/app/views/static_pages/flouridetreatment.html.erb
@@ -11,7 +11,7 @@
 		<div class="contact-container">
 			<h3>TLC Flouride Treatment </h3>
 			<p>			
-				Fluoride is a mineral that is found naturally in air, water, soil, and foods such meat, fish, eggs, and tea. (( It also is found in city water systems, toothpastes, mouthwashes, pills and gels )) and it is essential to the formation and maintenance of healthy teeth.<br>
+				Fluoride is a mineral that is found naturally in air, water, soil, and foods such meat, fish, eggs, and tea.  It also is found in city water systems, toothpastes, mouthwashes, pills and gels and it is essential to the formation and maintenance of healthy teeth.<br>
 			</p>
 			<p>
 				Enamel, the outer layer of a tooth, is composed of dense mineral crystals that are continuously dissolved by acids formed by plaque bacteria in a process called demineralization.  In turn, minerals such as calcium and phosphate are continuously redeposited in the enamel and are facilitated and hardened by fluoride. Without this process of remineralization your teeth would decay.<br>
