--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			<p style="margin-top:20px;">
-				Further comfort can be found in a soothing neck warmer, a relaxing back massager, a restful paraffin hand wax, and mesmerizing 920HR i-glasses.
+				Further comfort can be found in a soothing neck warmer, a relaxing back massager, and mesmerizing 920HR i-glasses.
 			</p>				
 		</div>
 	</div>
