--- a/app/views/static_pages/implants.html.erb
+++ b/app/views/static_pages/implants.html.erb
@@ -1,4 +1,4 @@
-<title>Implants | TLC Dental Group Syracuse</title>
+<title>Dental Implants | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Implants</h3> 
+			<h3>Dental Implants</h3> 
 			<p>
 				Implants are devices that replace the roots of missing teeth and provide a foundation for replacement teeth that look, feel, and function like natural teeth. Implanted teeth allow a person to preserve facial contours and once again enjoy the pleasures of smiling and normal eating. 
 			</p>
@@ -51,7 +51,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental implants consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from implants, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
