--- a/app/views/static_pages/sealants.html.erb
+++ b/app/views/static_pages/sealants.html.erb
@@ -1,4 +1,4 @@
-<title>Sealants | TLC Dental Group Syracuse</title>
+<title>Dental Sealants | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Sealants</h3>
+			<h3>Dental Sealants</h3>
 			<p>
 				Sealants are thin resinous films or coatings that are brushed on the chewing surfaces of back teeth to protect them from decay.<br> 
 			</p>
@@ -42,7 +42,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more information on sealants, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  And for prompt sealant protection of your teeth, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
+				For definitions related to dental sealants consult Dr. Rothenberg's Dental Dictionary.  And for prompt sealant protection of your teeth, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
 			</p>
 		</div>
 	</div>
