--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -1,4 +1,4 @@
-<title>Snap-On-Smile | TLC Dental Group Syracuse</title>
+<title>Snap On Smile | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>TLC Snap-On-Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4><br> 
+			<h3>TLC Snap On Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4><br> 
 			<b>Those Special Moments</b>
 			<p>
 				Are there moments when you dream of a perfect smile but don’t have the time or funds for a complete dental makeover?<br>
@@ -28,7 +28,7 @@
 				The TLC Snap-On Smile was designed by a renowned dentist after years of research and development to give you perfect teeth with which to eat, drink, talk, laugh, and smile normally.  Although very thin and lightweight, it is also remarkably strong.  It fits snuggly over your teeth like a glove and is easy to snap on and off.
 			</p>
 			<%= image_tag 'snaponsmile.jpg', :class => "float-right" %>	
-			<h6><b>TLC Snap-On Smile</b></h6>
+			<h6><b>TLC Snap-On Smile Addresses</b></h6>
 			<ul>
 				<li>Crooked teeth</li>
 				<li>Gaps between teeth</li>
@@ -64,7 +64,7 @@
 			</p>			
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.<br>
+				  To learn if you might benefit from Snap-On Smile, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.<br>
 			</p>			
 		</div>
 	</div>
