--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -60,7 +60,7 @@
 			<div class="row-fluid">
 				<div class="span12">			
 					<p>
-						Dr. Richard B Brinker has been caring for the patients of the TLC Dental Group since 2009.  He received his B.S. from the University of Florida and then, following the dental footsteps of his father, completed his doctorate of dental medicine at the University of Pittsburgh.  Subsequently he added to these academic achievements an MBA in Health Care Administration from the University of Colorado.<br>
+						Dr. Richard B. Brinker has been caring for the patients of the TLC Dental Group since 2009.  He received his B.S. from the University of Florida and then, following the dental footsteps of his father, completed his doctorate of dental medicine at the University of Pittsburgh.  Subsequently he added to these academic achievements an MBA in Health Care Administration from the University of Colorado.<br>
 					</p>
 					<p>
 						Dr. Brinker brings to the TLC Dental Group a varied and extensive career in dentistry.  Upon receiving his DDM, he practiced for ten years with Brinker Family Dentistry in Colorado.  He then began years of devoted dentistry for the U.S. Navy and U.S. Air Force in places as diverse as Alaska, California, Connecticut, Florida, Illinois, Virginia, Antarctica, and New Zealand.  From 2005 until 2006 he performed Oral Surgery at Cicero Dental Associates.  Additionally, Dr. Brinker founded Eagleone Surgical Services, established a medical records database company, and designed and developed a fiber optic dental operating handpiece system and several types of surgical specialty clamps.<br>
@@ -198,7 +198,7 @@
 				<div class="span12">			
 					<%= image_tag 'traci.jpg', :class => "float-left" %>
 					<p>
-						Traci hails from Seneca Falls and has been a valued member of TLC Dental for two years. She receiveed her Dental Assistant certification from MCC and her Implant certification from IOCC. Traci currently calls Camillus home and lives there with her husband Robert, her two year old daughter Kylie, and their cat Vedder. She loves spending time with family and friends, cooking, concerts, and the “grill master’s” steaks. In your visits to TLC Dental, Traci’s warmth will melth any trepidations and will make you feel completely at home.
+						Traci hails from Seneca Falls and has been a valued member of TLC Dental for two years. She receiveed her Dental Assistant certification from MCC and her Implant certification from IOCC. Traci currently calls Camillus home and lives there with her husband Robert, her two year old daughter Kylie, and their cat Vedder. She loves spending time with family and friends, cooking, concerts, and the “grill master’s” steaks. In your visits to TLC Dental, Traci’s warmth will melt any trepidations and will make you feel completely at home.
 					</p>
 				</div>
 			</div>	
@@ -268,7 +268,7 @@
 					<td>19 (one for each baby tooth)</td>
 				</tr>				
 				<tr>
-					<td>Realatives:</td>
+					<td>Relatives:</td>
 					<td>Tinkerbell (my favorite cousin)</td>
 				</tr>	
 				<tr>
@@ -305,7 +305,7 @@
 				</tr>
 				<tr>
 					<td>Second Favorite Person:</td>
-					<td>Marsha Rothenberg. She funny and always asks for wings so she can fly with me</td>
+					<td>Marsha Rothenberg. She's funny and always asks for wings so she can fly with me</td>
 				</tr>
 				<tr>
 					<td>Third Favorite Person:</td>
@@ -332,7 +332,7 @@
 					<td>31 but four sometimes hide</td>
 				</tr>
 				<tr>
-					<td>Realatives:</td>
+					<td>Relatives:</td>
 					<td>The Wisdom Tooth, (my great, great, great, great, great, great... grandfather)</td>
 				</tr>	
 				<tr>
@@ -389,7 +389,7 @@
 					<td class="rightcolumn">Frank Baum Kennels in Chittenango. Toto VII was my best friend there</td>
 				</tr>		
 				<tr>
-					<td>Realatives:</td>
+					<td>Relatives:</td>
 					<td>Buddy and Seamus, two Labradors who led spoiled lives in the Clinton White House, were distant cousins</td>
 				</tr>	
 				<tr>
