--- a/app/views/static_pages/stickyteeth.html.erb
+++ b/app/views/static_pages/stickyteeth.html.erb
@@ -1,4 +1,4 @@
-<title>Grimy, Sticky Teeth | TLC Dental Group Syracuse</title>
+<title>Grimy Sticky Teeth | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -20,7 +20,10 @@
 				A  Recare is a comfortable, biannual or, if needed, more frequent procedure that is performed by our skilled and experienced hygienists. It is a diagnostic, curative, preventive, and aesthetic procedure that is essential in achieving and maintaining your "Dream Smile."  Indeed, your dental and general health as well as your appearance are very much at risk if you are overdue for a Recare.<br>
 			</p>
 			<p>
-				Throughout your procedure you will enjoy the comfort of our signature “Gentle Dentistry.”  Click here for a fuller description of a Recare.  To schedule an appointment for this vitally important service please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				Throughout your procedure you will enjoy the comfort of our signature “Gentle Dentistry.”
+			</p>
+			<p>  
+				For definitions related to dental plaque consult Dr. Rothenberg's Dental Dictionary.  To schedule an appointment for this vitally important service please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>									
 		</div>
 	</div>
