--- a/app/views/static_pages/teethgrinding.html.erb
+++ b/app/views/static_pages/teethgrinding.html.erb
@@ -40,7 +40,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on teeth grinding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.   And for prompt alleviation and treatment of bruxism symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to bruxism consult Dr. Rothenberg's Dental Dictionary.   And for prompt alleviation and treatment of bruxism symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
