--- a/app/views/static_pages/toothache.html.erb
+++ b/app/views/static_pages/toothache.html.erb
@@ -22,7 +22,7 @@
 				Throughout this restorative process you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more toothache information click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of your toothache, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental carie consult Dr. Rothenberg's Dental Dictionary. And for prompt treatment and alleviation of your toothache, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
