--- a/app/views/static_pages/toothbrushmailbox.html.erb
+++ b/app/views/static_pages/toothbrushmailbox.html.erb
@@ -10,7 +10,7 @@
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<p style="color:#2a66af; text-align: justify">
-			<br>In ___I was conceived by the creative mind of Dr. Stephen Rothenberg.  Although a mere mailbox, I became, by dint of my size, well known in Greater Syracuse and beyond as the sentinel of the Rothenberg/TLC Dental Group practice at 7197 Highbridge Road, Fayetteville, New York.  I am now as recognizable at my post as the Queen’s Guards are at Buckingham Palace.  Indeed, I am celebrated, even coveted, by many who have come of age under my imposing presence.<br>
+			<br>In 2000 I was conceived by the creative mind of Dr. Stephen Rothenberg.  Although a mere mailbox, I became, by dint of my size, well known in Greater Syracuse and beyond as the sentinel of the Rothenberg/TLC Dental Group practice at 7197 Highbridge Road, Fayetteville, New York.  I am now as recognizable at my post as the Queen’s Guards are at Buckingham Palace.  Indeed, I am celebrated, even coveted, by many who have come of age under my imposing presence.<br>
 		</p>
 	</div>
 </div>	
