--- a/app/views/static_pages/toothsensitivity.html.erb
+++ b/app/views/static_pages/toothsensitivity.html.erb
@@ -21,7 +21,7 @@
 				Throughout this treatment you will enjoy the comfort of our signature “Gentle Dentistry.”  <br>
 			</p>
 			<p>	
-				For more information on tooth sensitivity click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of your tooth sensitivity, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.<br>
+				For definitions related to tooth sensitivity consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of your tooth sensitivity, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.<br>
 			</p>
 		</div>
 	</div>
