--- a/app/views/static_pages/veneers.html.erb
+++ b/app/views/static_pages/veneers.html.erb
@@ -1,4 +1,4 @@
-<title>Veneers | TLC Dental Group Syracuse</title>
+<title>Dental Veneers | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Veneers</h3>
+			<h3>Dental Veneers</h3>
 			<p>
 				Veneers are ultra-thin shells of porcelain that are bonded to the front surface of teeth to dramatically improve dental appearance.  They are a simple, comfortable, and popular way to cover imperfections and achieve a radiant smile.<br>
 			</p>
@@ -40,7 +40,7 @@
 			</p>						
 			<p>
 				<b>Veneer Composition</b><br>
-				The Snap-On Smile reflects our motto: “The Art of Gentle Dentistry.”  We provide for your comfort throughout the procedure and for your dental health in a completely functional set of teeth.  And in artfully shaping and color coding your model, we make your Dream Smile come true.
+				Veneers are made of dental porcelain, a fused mixture of silica, feldspar, potassium, and minor ingredients that, once bonded to teeth, becomes extremely hard and durable.	
 			</p>
 			<p>
 				<b>Veneer Durability</b><br>
@@ -52,7 +52,7 @@
 			</p>						
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental veneers consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from veneers, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
