--- a/app/views/static_pages/bonding.html.erb
+++ b/app/views/static_pages/bonding.html.erb
@@ -1,4 +1,4 @@
-<title>Bonding | TLC Dental Group Syracuse</title>
+<title>Dental Bonding | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Bonding</h3> 
+			<h3>Dental Bonding</h3> 
 			<p>
 				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
 			</p>
@@ -49,7 +49,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions relating to bonding consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
