--- a/app/views/static_pages/brokendentures.html.erb
+++ b/app/views/static_pages/brokendentures.html.erb
@@ -15,7 +15,10 @@
 				If your dentures are broken or ill-fitting, you should seek prompt treatment from TLC Dental to assure your dental health and comfort.  If your dentures are ill fitting, we will adjust them for a proper fit.  If they are broken, we will attempt to repair them tor, if they are irreparable, we will replace them with new dentures for optimum comfort in eating, speaking, and smiling. <br>
 			</p>
 			<p>
-				For more information on broken or ill fitting dentures, click on Dr. Rothenberg's Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment of broken or ill fitting dentures, tplease call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				Throughout your examination and treatment you will enjoy the comfort of our signature "Gentle Dentistry.
+			</p>
+			<p>
+				For definitions related to dentures consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment of broken or ill fitting dentures, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>								
 		</div>
 	</div>
