--- a/app/views/static_pages/brokentooth.html.erb
+++ b/app/views/static_pages/brokentooth.html.erb
@@ -29,10 +29,7 @@
 				Throughout this treatment you will enjoy the comfort of our signature “Gentle Dentistry."<br>
 			</p>
 			<p>
-				For more information on fractured or broken teeth, click on Dr. Rothenberg’s Dental Encyclopedia.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.<br>
-			</p>
-			<p>
-				For more information on fractured or broken teeth, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to a fractured tooth consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>									
 		</div>
 	</div>
