--- a/app/views/static_pages/dentures.html.erb
+++ b/app/views/static_pages/dentures.html.erb
@@ -11,7 +11,7 @@
 		<div class="contact-container">
 			<h3>Dentures</h3> 
 			<p>
-				A denture is a removable replacement for missing teeth and their surrounding tissues.  There are two principal types of denture. A “Full or Complete Denture” is used when all teeth are missing in the upper and/or lower dental arches and a “Partial Denture” is used when only some teeth are missin. Additionally, an “immediate” full denture may be placed on the gums of a newly extracted teeth and subsequently relined after the gums have healed. Alternately, if a patient’s gums have already healed from tooth loss, a “conventional” full denture may permanently be emplaced. Once properly prepared and fitted, full and partial dentures improve oral health and appearance while projecting a natural look and welcome smile. 
+				A denture is a removable replacement for missing teeth and their surrounding tissues.  There are two principal types of denture. A “Full or Complete Denture” is used when all teeth are missing in the upper and/or lower dental arches and a “Partial Denture” is used when only some teeth are missing. Additionally, an “immediate” full denture may be placed on the gums of newly extracted teeth and subsequently relined after the gums have healed. Alternately, if a patient’s gums have already healed from tooth loss, a “conventional” full denture may permanently be emplaced. Once properly prepared and fitted, full and partial dentures improve oral health and appearance while projecting a natural look and welcome smile. 
 			</p>
 			<%= image_tag 'denture.jpg', :class => "float-right" %>	
 			<h6><b>Dentures</b></h6>
@@ -24,16 +24,16 @@
 				<li>Restore normal speech often distorted by missing teeth</li>
 				<li>Restore appearance and self confidence diminished by missing teeth</li>
 				<li>Greatly reduce the risk of temporomandibular joint (TMJ) disorders caused by missing teeth
-				<li>Create your Dream Smile</li>
+				<li>Create your (Dream Smile)</li>
 			</ul>
 
 			<p>
 				<b>Denture Procedure</b><br>
-				Dentures are a several step procedure. In your first denture appointment at TLC we will ask you to describe your denture goals and we will then review the options of a full or partial denture and those of a conventional or immediate denture. We also will review the options for dental retention such as natural suction, dental adhesives, implant posts, or fasteners.
+				Dentures are a several step procedure. In your first denture appointment at TLC we will ask you to describe your denture goals and we will then review the options for a full or partial denture and those for a conventional or immediate denture. We also will review the options for dental retention such as natural suction, dental adhesives, implant posts, or fasteners.
 			</p>
 			<p>
 				<b>Full Denture</b><br>
-				A full upper denture covers the palate or top of the mouth and is contoured in color and shape to match your gums over which it fits. A full lower denture of similar color fits over the gums and is hsaped like a horseshoe to accommodate the tongue.<br>
+				A full upper denture covers the palate or top of the mouth and is contoured in color and shape to match your gums over which it fits. A full lower denture of similar color fits over the gums and is shaped like a horseshoe to accommodate the tongue.<br>
 			</p>
 			<p>
 				A popular type of full denture is the “TLC Snap-In Denture” or over-denture with snap-in retention. They are full upper and lower dentures secured wholly by implants and fasterners to which they simply snap in and off. <br>
@@ -42,17 +42,17 @@
 				TLC Dental draws on art and technology to create a full denture that reflects your uniqueness and distinctive appearance as well as your sense of comfort in eating, speaking, and smiling.  We begin by taking a precise impression and detailed measurements of both the upper and lower parts of your mouth that we use to form a wax model of your denture.<br>
 			</p>
 			<p>
-				This “Try-in Denture” becomes a model for your desired look and feel.  You can choose from our vast palette of shapes, sizes, and colors to create the components of your Dream Smile and try it “in” for look and feel. Your dream then comes true when a highly specialized laboratory, in accordance with our exacting specifications, transforms the detailed model into your unique dentures.<br>
+				This “Try-in Denture” becomes a model for your desired look and feel.  You can choose from our vast palette of shapes, sizes, and colors to create the components of your (Dream Smile) and try it “in” for look and feel. Your dream then comes true when a highly specialized laboratory, in accordance with our exacting specifications, transforms the detailed model into your unique dentures.<br>
 			</p>
 			<p>
 				The next step of your denture preparation is an essential one of emplacement, a process that may be facilitated by implant posts or fasteners.  Once in place, and particularly in the initial period of denture use, Dr. Rothenberg and his experienced staff will work with you in fine tuning and adjusting your dentures for optimum comfort in eating, speaking, and smiling.<br>
 			</p>			
 			<p>
 				<b>Removable Partial Denture</b><br>
-				A removable partial denture, also called a removable bridge, comes in many forms. A traditional type contains metal and contains metal and consists of a gum color acrylic base to which one or more prostehtic teeth are affixed.<br>
+				A removable partial denture, also called a removable bridge, comes in many forms. A traditional type contains metal and consists of a gum color acrylic base to which one or more prostehtic teeth are affixed.<br>
 			</p>
 			<p>
-				Another type is a flexi partial denture that is more popular because it does not contain metal. Its gums colored vinyl base has calsps that attach to your existing teeth and its flexibility enables a comfortable adjustment to the contours of the mouth. <br>
+				Another type is a flexi partial denture that is more popular because it does not contain metal. Its gum colored vinyl base has clasps that attach to your existing teeth and its flexibility enables a comfortable adjustment to the contours of the mouth. <br>
 			</p>
 			<p>
 				Just as with a full denture, we take a detailed impression of the area of your missing teeth for a “Try-In Partial” for which you may choose the aesthetic elements. A highly specialized laboratory then draws on our precise measurements to create your removable partile denture.<br>
@@ -63,7 +63,7 @@
 			</p>	
 			<p>
 				<b>Denture Support</b><br>
-				TLC provides you with lifelong denture support.  With your dentures you receive a TLC Denture Acclimation booklet tthis process, for suitable periods of wear and removal, for use of adhesives, for care, and for cleaning.  And with regular examinations, TLC will maintain your dentures for continued use, comfort, and confidence.  
+				TLC Dental provides you with lifelong denture support.  With your dentures you receive a TLC Denture Acclimation booklet describing the acclimation process of dentures as your mouth adjusts to their use.  It also provides advice for facilitating this process, for suitable periods of wear and removal, for use of adhesives, for care, and for cleaning.  And with regular examinations, TLC will maintain your dentures for continued use, comfort, and confidence
 			</p>					
 			<p>
 				<b>Gentle Comfort</b><br>
@@ -83,7 +83,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				"For definitions related to dentures consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from Dentures, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
