--- a/app/views/static_pages/dreamsmilediet.html.erb
+++ b/app/views/static_pages/dreamsmilediet.html.erb
@@ -42,9 +42,9 @@
 			<ul>
 				<li>Fermentable carbohydrates such as bread, crackers, bananas, and breakfast cereals thatbreak down in the mouth and form damaging acids are of particular concern to your “Dream Smile”. These foods should be carefully selected, eaten in moderation, and at times paired beneficially with other foods  For example, crackers might be eaten with aged, hard cheese to counter acidity  Cereals with low sugar content should be preferred to those high in sugar.</li><br>
 
-				<li>Food and drink with high acidity also can compromise your “Dream Smile” by contributing todental erosion.  You should rinse your mouth with water after consuming acidic foods such as fruit juices, pickles, and lemons</li><br>
+				<li>Food and drink with high acidity also can compromise your “Dream Smile” by contributing to dental erosion.  You should rinse your mouth with water after consuming acidic foods such as fruit juices, pickles, and lemons</li><br>
 
-				<li>Snacking between meals should be avoided or minimized and should exclude highly sweetened food and  “sticky carbohydrates” such as potato chips that linger longer on the teeth, lodgebetween them, and enable prolonged acidic formation and erosion.</li><br>
+				<li>Snacking between meals should be avoided or minimized and should exclude highly sweetened food and  “sticky carbohydrates” such as potato chips that linger longer on the teeth, lodge between them, and enable prolonged acidic formation and erosion.</li><br>
 
 				<li>Water should be your beverage of choice. The drinking of sodas should be avoided or minimized, limited to small rather than large containers, and consumed through straws.</li><br>
 
@@ -54,7 +54,7 @@
 			</ul>
 			<p>
 				<b>More Information</b><br>
-				For more information on Diet and Dental Health, click on Dr. Rothenberg’s Dental Encyclopedia. And for a dental review of your diet and a copy of the TLC Dream Smile Diet booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental diets consult Dr. Rothenberg's Dental Dictionary. And for a dental review of your diet and a copy of the TLC Dream Smile Diet booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684.
 			</p> 
 		</div>
 	</div>
