--- a/app/views/static_pages/drymouth.html.erb
+++ b/app/views/static_pages/drymouth.html.erb
@@ -38,7 +38,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on dry mouth (Xerostomia) click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary. And for prompt diagnosis and treatment of your dry mouth, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
+				For definitions related to Xerostomia consult Dr. Rothenberg's Dental Dictionary. And for prompt diagnosis and treatment of your dry mouth, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
 			</p>									
 		</div>
 	</div>
