--- a/app/views/static_pages/fillings.html.erb
+++ b/app/views/static_pages/fillings.html.erb
@@ -1,4 +1,4 @@
-<title>Fillings | TLC Dental Group Syracuse</title>
+<title>Dental Fillings | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Cosmetic Fillings</h3> 
+			<h3>Dental Fillings</h3> 
 			<p>
 				A filling is dental restorative material used to restore a tooth with structural loss to its normal condition in health, function, and appearance.  
 			</p>
@@ -26,7 +26,7 @@
 				<li>Restore cracked and broken teeth</li>
 				<li>Restore worn teeth</li>
 				<li>Restore appearance and self confidence diminished by decayed teeth</li>
-				<li>Create your Dream Smile</li>
+				<li>Create your (Dream Smile)</li>
 			</ul>
 
 			<p>
@@ -76,7 +76,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For definitions related to dental fillings consult Dr. Rothenberg's Dental Dictionary.  To learn if you might benefit from fillings, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
 	</div>
