--- a/app/views/static_pages/headache.html.erb
+++ b/app/views/static_pages/headache.html.erb
@@ -37,7 +37,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on oral and dental related headaches, click on Dr. Rothenberg’s Dental Encyclopedia  and Dr. Rothenberg's Dental Dictionary. And for prompt treatment and alleviation of these headaches, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to dental headaches consult Dr. Rothenberg's Dental Dictionary." And for prompt treatment and alleviation of these headaches, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>									
 		</div>
 	</div>
