--- a/app/views/static_pages/oralcancerscreening.html.erb
+++ b/app/views/static_pages/oralcancerscreening.html.erb
@@ -61,7 +61,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more information on oral cancer screening, click on Dr. Rothenberg’s Dental Encyclopedia. And to schedule an oral cancer screening, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684.  		
+				For definitions related to oral cancer consult Dr. Rothenberg's Dental Dictionary. And to schedule an oral cancer screening, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684.  		
 			</p>	
 		</div>
 	</div>
