--- a/app/views/static_pages/rootcanal.html.erb
+++ b/app/views/static_pages/rootcanal.html.erb
@@ -29,7 +29,7 @@
 				Although root canals have long had a foreboding image, you will experience only relief as you enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on root canals, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary..  And for prompt alleviation and treatment of root canal symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
+				For definitions related to a dental root canal consult Dr. Rothenberg's Dental Dictionary.  And for prompt alleviation and treatment of root canal symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
 			</p>									
 		</div>
 	</div>
