--- a/app/views/static_pages/sleepapnea.html.erb
+++ b/app/views/static_pages/sleepapnea.html.erb
@@ -40,7 +40,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
-				For more information on sleep apnea, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of sleep apnea symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.  
+				For definitions related to sleep apnia consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of sleep apnea symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.  
 			</p>									
 		</div>
 	</div>
